Added AdminId to JWT token claims

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-7UAHAC9;Database=BPMS_DB;User Id=sa;Password=Admin@123"
+    "DefaultConnection": "Server=APPU;Database=BPMS_DB;User Id=sa;Password=Admin@123"
   }
 }
